NetBSD Problem Report #50302

From www@NetBSD.org  Mon Oct  5 08:18:41 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 844C3A5858
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  5 Oct 2015 08:18:41 +0000 (UTC)
Message-Id: <20151005081840.97AC0A6555@mollari.NetBSD.org>
Date: Mon,  5 Oct 2015 08:18:40 +0000 (UTC)
From: skrll@netbsd.org
Reply-To: skrll@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: RPI reports "sdhc0: cmd timeout error"
X-Send-Pr-Version: www-1.0

>Number:         50302
>Category:       kern
>Synopsis:       RPI reports "sdhc0: cmd timeout error"
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Oct 05 08:20:00 +0000 2015
>Closed-Date:    Wed Oct 07 07:04:35 +0000 2015
>Last-Modified:  Wed Oct 07 07:04:35 +0000 2015
>Originator:     Nick Hudson
>Release:        -current 7.99.21
>Organization:
none
>Environment:
NetBSD rpi 7.99.21 NetBSD 7.99.21 (RPI) #10: Sun Oct  4 11:40:22 BST 2015  nick@zoom:/wrk/nhusb/obj.evbearmv6hf-el/wrk/nhusb/src/sys/arch/evbarm/compile/RPI evbarm

>Description:
rpi# dmesg | grep ^sdhc
sdhc0 at obio0 intr 62: SDHC controller
sdhc0: interrupting on intr 62
sdhc0: SDHC 3.0, rev 153, platform DMA, 250000 kHz, HS SDR50 3.3V, re-tuning mode 1, 1024 byte blocks
sdhc0: cmd timeout error
sdhc0: cmd timeout error
rpi# 

>How-To-Repeat:
Boot -current on a RaspberryPI
>Fix:
Please

>Release-Note:

>Audit-Trail:
From: mlelstv@serpens.de (Michael van Elst)
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/50302: RPI reports "sdhc0: cmd timeout error"
Date: Tue, 6 Oct 2015 14:31:56 +0000 (UTC)

 skrll@netbsd.org writes:

 >sdhc0: SDHC 3.0, rev 153, platform DMA, 250000 kHz, HS SDR50 3.3V, re-tuning mode 1, 1024 byte blocks
 >sdhc0: cmd timeout error
 >sdhc0: cmd timeout error
 >rpi# 

 There are real command timeouts caused by probing for cards.
 I'm preparing a patch to hide these expected errors.

 -- 
 -- 
                                 Michael van Elst
 Internet: mlelstv@serpens.de
                                 "A potential Snark may lurk in every tree."

From: "Michael van Elst" <mlelstv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50302 CVS commit: src/sys/dev/sdmmc
Date: Tue, 6 Oct 2015 14:32:51 +0000

 Module Name:	src
 Committed By:	mlelstv
 Date:		Tue Oct  6 14:32:51 UTC 2015

 Modified Files:
 	src/sys/dev/sdmmc: sdhc.c sdmmc_io.c sdmmc_mem.c sdmmcvar.h

 Log Message:
 support hiding command timeout messages with a new command flag and use this
 when probing for cards. Should fix PR 50302.


 To generate a diff of this commit:
 cvs rdiff -u -r1.87 -r1.88 src/sys/dev/sdmmc/sdhc.c
 cvs rdiff -u -r1.11 -r1.12 src/sys/dev/sdmmc/sdmmc_io.c
 cvs rdiff -u -r1.46 -r1.47 src/sys/dev/sdmmc/sdmmc_mem.c
 cvs rdiff -u -r1.19 -r1.20 src/sys/dev/sdmmc/sdmmcvar.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Wed, 07 Oct 2015 07:04:35 +0000
State-Changed-Why:
Fixed by mlelstv. Thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.