support hiding command timeout messages with a new command flag and use this when probing for cards. Should fix PR 50302.